--- a/static/settings.html
+++ b/static/settings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <link rel="shortcut icon" id="dynamic-favicon" href="favicon.png">
-    <title id="dynamic-title"> Schoology | Home</title>
+    <title id="dynamic-title"> Home | Schoology</title>
    <!-- Meta Data-->
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
