--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
   <script src="/scripts/window.js"></script>
   <!-- Site Data-->
     <link rel="shortcut icon" id="dynamic-favicon" href="favicon.png">
-    <title id="dynamic-title"> Schoology | Home</title>
+    <title id="dynamic-title"> Home | Schoology</title>
   <!-- Meta Data-->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
