--- a/static/apps.html
+++ b/static/apps.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="shortcut icon" id="dynamic-favicon" href="favicon.png">
-    <title id="dynamic-title"> Schoology | Home</title>
+    <title id="dynamic-title"> Home | Schoology</title>
     <script src="scripts/index.js"></script>
     <script src="./h/uv.bundle.js"></script>
     <script src="./h/uv.config.js"></script>
