--- a/static/calendar/retro-bowl/index.html
+++ b/static/calendar/retro-bowl/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <link rel="shortcut icon" id="dynamic-favicon" href="favicon.png">
-  <title id="dynamic-title"> Schoology | Home</title>
+  <title id="dynamic-title"> Home | Schoology</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="pragma" content="no-cache" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
