--- a/static/loading.html
+++ b/static/loading.html
@@ -90,7 +90,7 @@
   <div id="loader"></div>
   <div class="message animate-bottom">
     <p class="description">
-      Please wait a moment. Our servers may be under high load causing some slowness.<br>If you have any issues, please <a class="discord-link" href="https://discord.gg/gointerstellar" target="_blank">join our Discord server</a>.
+      Please wait a moment. If the page doesn't load, or becomes unresponsive, please allocate more computing power by clearing your cache or close chrome tabs.<br>If you have any issues, please <a class="discord-link" href="https://discord.gg/gointerstellar" target="_blank">join our Discord server</a>.
     </p>
   </div>
   <script type='text/javascript' src='//pl20739534.highcpmrevenuegate.com/0a/70/64/0a706460ed00d21a37b6d751dc6410ea.js'></script>
